--- a/packages/x-core/package.json
+++ b/packages/x-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@crixusshen/x-core",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -15,5 +15,8 @@
   },
   "devDependencies": {
     "typescript": "^2.5.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
