--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"private": true,
+	"name": "@crixusshen/x-core",
+	"version": "1.0.1",
 	"scripts": {
 		"bootstrap": "lerna bootstrap",
 		"test": "lerna run test",
@@ -12,5 +13,8 @@
 		"lerna": "^2.11.0",
 		"rimraf": "^2.6.2",
 		"typescript": "^2.8.1"
+	},
+	"publishConfig": {
+		"access": "public"
 	}
 }
