--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,22 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.2.5",
-  "npmClient": "yarn"
+  "version": "2.0.0",
+  "npmClient": "yarn",
+  "changelog": {
+    "labels": {
+      "tag: new feature": ":rocket: New Feature",
+      "tag: breaking change": ":boom: Breaking Change",
+      "tag: bug fix": ":bug: Bug Fix",
+      "tag: enhancement": ":nail_care: Enhancement",
+      "tag: documentation": ":memo: Documentation",
+      "tag: internal": ":house: Internal"
+    },
+    "cacheDir": ".changelog"
+  },
+  "commands": {
+    "publish": {
+      "message": "chore(release): publish %v"
+    }
+  }
 }
