--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "2.0.1",
+  "version": "independent",
   "npmClient": "yarn",
   "changelog": {
     "labels": {
