--- a/packages/x-core/package.json
+++ b/packages/x-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@crixusshen/x-core",
-  "version": "2.0.5",
+  "version": "2.0.7",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -10,11 +10,16 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "peerDependencies": {
+    "typescript": ">=2.2 <2.4"
+  },
   "dependencies": {
-    "@types/node": "^8.0.28"
+    "@types/node": "^8.0.28",
+    "react": "^16.4.1",
+    "react-native": "^0.56.0"
   },
   "devDependencies": {
-    "typescript": "^2.5.2"
+    "typescript": "2.3"
   },
   "publishConfig": {
     "access": "public"
