--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
     "packages/*"
   ],
   "version": "independent",
-  "npmClient": "yarn",
+  "npmClient": "npm",
   "changelog": {
     "labels": {
       "tag: new feature": ":rocket: New Feature",
