--- a/packages/x-cli/package.json
+++ b/packages/x-cli/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@crixusshen/x-cli",
-  "version": "2.1.14",
+  "version": "2.1.15",
   "description": "",
   "main": "lib/main.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/@crixusshen/x-cli.git"
+  },
   "scripts": {
     "test": "ava",
     "prepare": "tsc -p tsconfig.build.json"
