chore(release): publish %v
 - @crixusshen/x-cli@2.2.1
 - @crixusshen/x-serve@2.2.1

--- a/packages/x-serve/package.json
+++ b/packages/x-serve/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@crixusshen/x-serve",
-  "version": "2.1.1",
+  "private": true,
+  "version": "2.2.1",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
