--- a/packages/x-core/package.json
+++ b/packages/x-core/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@crixusshen/x-core",
-  "version": "2.1.3",
+  "private": true,
+  "version": "2.2.3",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
